--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
             <div class="staff-info">
               <h3>Martin Wanjohi</h3>
               <p>Director & Lead Instructor</p>
+              <p>director@ssogroup.space</p>
             </div>
           </div>
           <!-- Staff Member 2 -->
@@ -282,6 +283,7 @@
             <div class="staff-info">
               <h3>Brian Otieno</h3>
               <p>Robotics Coach</p>
+              <p>brian@ssogroup.space</p>
             </div>
           </div>
           <!-- Staff Member 3 -->
@@ -294,6 +296,7 @@
             <div class="staff-info">
               <h3>Chloe Njeri</h3>
               <p>Scratch Mentor</p>
+              <p>chloe@ssogroup.space</p>
             </div>
           </div>
           <!-- Staff Member 4 -->
@@ -306,6 +309,7 @@
             <div class="staff-info">
               <h3>David Mwangi</h3>
               <p>Python Tutor</p>
+              <p>david@ssogroup.space</p>
             </div>
           </div>
         </div>
