--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       <div class="container">
         <h2>Ready to Code This Summer?</h2>
         <p>Spots fill up fast—reserve your child’s place today!</p>
-        <a href="mailto:info@nairobi-codingschool.ke" class="button"
+        <a href="mailto:enroll@ssogroup.space" class="button"
           >Email Us to Enroll</a
         >
       </div>
